🔧 FIX: Corrigir erro Whisper.js - versão estável 2.6.0 + configurações otimizadas

--- a/index.html
+++ b/index.html
@@ -805,6 +805,10 @@
     </div>
 
     <!-- Scripts -->
+    <!-- 🤖 Configuração Whisper.js -->
+    <script type="module" src="js/whisper-config.js"></script>
+    
+    <!-- 🚀 App principal -->
     <script type="module" src="js/app.js"></script>
 </body>
 </html> 
