--- a/index.html
+++ b/index.html
@@ -808,7 +808,10 @@
     <!-- 🤖 Configuração Whisper.js -->
     <script type="module" src="js/whisper-config.js"></script>
     
-    <!-- 🚀 App principal -->
-    <script type="module" src="js/app.js"></script>
+    <!-- 🚀 App principal (alternativa estável) -->
+    <script type="module" src="js/app-whisper-web.js"></script>
+    
+    <!-- Fallback original (comentado) -->
+    <!-- <script type="module" src="js/app.js"></script> -->
 </body>
 </html> 
