--- a/index.html
+++ b/index.html
@@ -805,13 +805,7 @@
     </div>
 
     <!-- Scripts -->
-    <!-- 🤖 Configuração Whisper.js -->
-    <script type="module" src="js/whisper-config.js"></script>
-    
-    <!-- 🚀 App principal (alternativa estável) -->
-    <script type="module" src="js/app-whisper-web.js"></script>
-    
-    <!-- Fallback original (comentado) -->
-    <!-- <script type="module" src="js/app.js"></script> -->
+    <!-- 🚀 Sistema de Transcrição Funcional -->
+    <script src="transcriber.js?v=2025010301"></script>
 </body>
 </html> 
