🔧 UPLOAD CORRIGIDO: Sistema testado com debug completo e event listeners corrigidos v2025010302

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                     </div>
                 </div>
                 
-                <button class="transcribe-btn" onclick="startTranscription()" id="transcribeBtn">
+                <button class="transcribe-btn" id="transcribeBtn">
                     🚀 Iniciar Transcrição
                 </button>
             </div>
@@ -805,7 +805,7 @@
     </div>
 
     <!-- Scripts -->
-    <!-- 🚀 Sistema de Transcrição Funcional -->
-    <script src="transcriber.js?v=2025010301"></script>
+    <!-- 🚀 Sistema de Transcrição CORRIGIDO -->
+    <script src="transcriber-fixed.js?v=2025010302"></script>
 </body>
 </html> 
