🔥 CACHE BUSTING AGRESSIVO: Força limpeza completa - app.js v2025010304 DEFINITIVO

--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="app.js?v=2025010303"></script>
+    <script src="app.js?v=2025010304&bust=cache"></script>
     
     <!-- Service Worker -->
     <script>
