🔥 SOLUÇÃO RADICAL: Novo arquivo script.js v2025010305 - EVITA CACHE NETLIFY

--- a/index.html
+++ b/index.html
@@ -655,8 +655,8 @@
         </footer>
     </div>
 
-    <!-- JavaScript -->
-    <script src="app.js?v=2025010304&bust=cache"></script>
+    <!-- JavaScript - NOVO ARQUIVO PARA EVITAR CACHE -->
+    <script src="script.js?v=2025010305&cache=false&timestamp=1736001234"></script>
     
     <!-- Service Worker -->
     <script>
