EMERGENCIA: Sistema limpo v2025010306 - Bypass total do cache

--- a/conversor.html
+++ b/conversor.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎯 Conversor Áudio → Texto | Sistema Avançado de Transcrição</title>
     
+    <!-- CACHE BUSTING EXTREMO v2025010306 -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    
     <!-- Meta Tags SEO e Compartilhamento -->
     <meta name="description" content="Sistema avançado de transcrição de áudio para texto. Gratuito, offline, suporte a 8 formatos (MP3, WAV, OGG, etc.). Interface moderna e processamento local seguro.">
     <meta name="keywords" content="transcrição áudio, conversor áudio texto, speech to text, whisper, transcritor, mp3 para texto, wav para texto">
@@ -344,7 +349,7 @@
 
     <!-- JavaScript Inline para evitar cache -->
     <script>
-        console.log('🚀 CONVERSOR DE ÁUDIO CARREGADO - VERSÃO ZERO CACHE');
+        console.log('🚀 CONVERSOR DE ÁUDIO CARREGADO - VERSÃO ULTRA CACHE BUST v2025010306');
 
         class ConversorAudio {
             constructor() {
