FORÇA BRUTA v2025010315 - REBUILD TOTAL

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="container">
         <h1 class="titulo">🎯 Conversor de Áudio para Texto</h1>
         <p class="subtitulo">Sistema Simples e Funcional</p>
-        <div class="nova-versao">✨ PROJETO NOVO - ZERO CACHE ✨</div>
+        <div class="nova-versao">🔥 FORÇA BRUTA v2025010315 - REBUILD TOTAL 🔥</div>
         
         <div class="upload-area" id="uploadArea">
             <div class="upload-icon">📁</div>
@@ -256,7 +256,8 @@
     </div>
 
     <script>
-        console.log('🚀 PROJETO NOVO CARREGADO - ZERO PROBLEMAS DE CACHE');
+        console.log('🔥 FORÇA BRUTA v2025010315 - REBUILD TOTAL EXECUTADO');
+        console.log('🚨 ATENÇÃO: Sistema completamente novo - cache destruído');
         
         class ConversorSimples {
             constructor() {
