BUILD FIX v2025010316 - Configuração mínima para deploy direto

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="container">
         <h1 class="titulo">🎯 Conversor de Áudio para Texto</h1>
         <p class="subtitulo">Sistema Simples e Funcional</p>
-        <div class="nova-versao">🔥 FORÇA BRUTA v2025010315 - REBUILD TOTAL 🔥</div>
+        <div class="nova-versao">⚡ BUILD FIX v2025010316 - DEPLOY DIRETO ⚡</div>
         
         <div class="upload-area" id="uploadArea">
             <div class="upload-icon">📁</div>
