NO-BUILD v2025010318 - Bypass total do sistema de build

--- a/simple.html
+++ b/simple.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container">
         <h1 class="title">🎯 Conversor de Áudio</h1>
-        <div class="version">✅ MINIMALISTA v2025010317 - DEPLOY GARANTIDO</div>
+        <div class="version">🚫 NO-BUILD v2025010318 - BYPASS TOTAL 🚫</div>
         
         <div class="upload-area" onclick="document.getElementById('fileInput').click()">
             <div style="font-size: 3rem; margin-bottom: 15px;">📁</div>
