🛡️ SOLUÇÃO RADICAL NETLIFY v2025010321 - Bypass Ultra-Agressivo Anti-Build

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+🚨 NETLIFY: PROJETO HTML PURO - SEM BUILD NECESSÁRIO
+❌ NÃO instalar dependências Node.js/NPM/Yarn
+❌ NÃO executar comandos de build
+✅ APENAS servir arquivos estáticos
+Configuração: netlify.toml define bypass completo
+-->
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
